--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,16 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+button {
+  @apply cursor-pointer rounded font-semibold px-4 py-2 disabled:cursor-not-allowed;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-background: #091235; /* Royal Blue */
+  --color-foreground: #88a9c3; /* Blue Gray */
+  --color-primary: #14202e; /* Navy Blue */
+  --color-secondary: #2b4257; /* Midnight Blue */
+  --color-accent: #88a9c3; /* Blue Gray */
+  --color-danger: #ef4444; /* red-500 */
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
