--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,24 @@ button {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
+
+
+@layer utilities {
+  /* Custom Scrollbar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: theme(--color-accent);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: theme(--color-secondary);
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: theme(--color-primary);
+  }
+}
